--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
       "@whiskeysockets/baileys": "^6.7.2",
       "chokidar": "^3.6.0",
       "qrcode-terminal": "^0.12.0"
+   },
+   "engines": {
+      "node": "22.x"
    }
 }
