Added eslint  and prettier

--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
-   "name": "whatsapp-bot",
-   "module": "index.ts",
-   "type": "module",
-   "scripts": {
-      "dev": "npm-run-all2 --parallel  build dev:watch",
-      "dev:watch": "node build/index.js --watch",
-      "build": "bun build.ts --watch",
-      "build:watch": "bun build  src/index.ts --sourcemap=external  --target node --external @mapbox  --outdir build --watch"
-   },
-   "devDependencies": {
-      "@hapi/boom": "^10.0.1",
-      "@types/bun": "latest",
-      "npm-run-all2": "^6.1.2"
-   },
-   "peerDependencies": {
-      "typescript": "^5.0.0"
-   },
-   "dependencies": {
-      "@whiskeysockets/baileys": "^6.7.2",
-      "chokidar": "^3.6.0",
-      "qrcode-terminal": "^0.12.0"
-   },
-   "engines": {
-      "node": "22.x"
-   }
+  "name": "whatsapp-bot",
+  "module": "index.ts",
+  "type": "module",
+  "scripts": {
+    "dev": "npm-run-all2 --parallel  build dev:watch",
+    "dev:watch": "node build/index.js --watch",
+    "build": "bun build.ts --watch",
+    "build:watch": "bun build  src/index.ts --sourcemap=external  --target node --external @mapbox  --outdir build --watch"
+  },
+  "devDependencies": {
+    "@hapi/boom": "^10.0.1",
+    "@types/bun": "latest",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
+    "eslint": "^9.2.0",
+    "chokidar": "^3.6.0",
+    "npm-run-all2": "^6.1.2"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@whiskeysockets/baileys": "^6.7.2",
+    "qrcode-terminal": "^0.12.0"
+  },
+  "engines": {
+    "node": "22.x"
+  }
 }
