--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "whatsapp-bot",
   "module": "index.ts",
   "type": "module",
+  "version": "0.0.1",
+  "repository": {
+    "url": "https://github.com/allexxis/whatsapp-bot.git",
+    "type": "git"
+  },
   "scripts": {
     "dev": "npm-run-all2 --parallel  build dev:watch",
     "dev:watch": "node build/index.js --watch",
